--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "",
   "scripts": {
     "start": "nodemon server/index.js",
+    "react-dev": "./node_modules/.bin/webpack -d -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,11 +19,17 @@
   },
   "homepage": "https://github.com/meloncats/chorecat#readme",
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "node": "^10.6.0",
     "nodemon": "^1.18.2",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "webpack": "^4.16.1",
+    "webpack-cli": "^3.0.8"
   }
 }
