--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "mysql": "^2.15.0",
     "node": "^10.6.0",
     "nodemon": "^1.18.2",
     "react": "^16.4.1",
