--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "nodemon": "^1.18.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.0.8"
   }
