--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/meloncats/chorecat#readme",
   "dependencies": {
     "@material-ui/core": "^1.4.0",
+    "@material-ui/icons": "^2.0.0",
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
